--- a/static/sass/modules/_index.scss
+++ b/static/sass/modules/_index.scss
@@ -10,3 +10,4 @@
 @import "color-palette/color-palette";
 @import "typography/typography";
 @import "language-menu/language-menu";
+@import "nav-menu-small/nav-menu-small";
