--- a/static/sass/modules/language-menu/_language-menu.scss
+++ b/static/sass/modules/language-menu/_language-menu.scss
@@ -60,7 +60,7 @@ $module: 'language-menu';
         display: inline-block;
         color: get-site-color('blue');
         
-        @include type-settings(1);
+        @include type-settings();
         @include font-regular();
         text-align: center;
         padding: 0.5rem 1rem;
