--- a/static/sass/modules/nav-menu-small/_nav-menu-small.scss
+++ b/static/sass/modules/nav-menu-small/_nav-menu-small.scss
@@ -13,7 +13,21 @@ $module: 'nav-menu-small';
         @include vrhythm('padding-bottom');
 
         &_visible {
+
+            @keyframes slide-in {
+                0% { 
+                    transform: translateY(-100%);
+                    opacity: 0; 
+                }
+                100% { 
+                    transform: translateY(0%);
+                    opacity: 1.0; 
+                }
+            }
+
             display: inline-block;
+            max-height: 50%;
+            animation: slide-in 1s forwards;
         }
     }
 
@@ -21,15 +35,45 @@ $module: 'nav-menu-small';
     {
         @include type-settings(2);
         color: get-site-color('wall');
-        text-align: right;
-        padding-right: 2rem;
-    }
-    
-    &__toggle-area-icon
-    {
-        @include fa-icon($fa-var-bars);
-    }
+        right: 0; text-align: center;
+        //text-align: right;
+        //padding-right: 2rem;
 
+        &-left-container{
+            display: inline-block;
+            float: left;
+
+            &-icon{
+                @include fa-icon($fa-var-user);
+                padding-left: 1rem;
+            }
+        }
+
+        &-center-container{
+            display: inline-block;
+            margin: 0 auto;
+
+            &-icon{
+                @include fa-icon($fa-var-globe);
+                color: get-site-color('blue');
+            }
+        }
+
+        &-right-container{
+            display: inline-block;
+            float: right;
+
+            &-icon{
+                @include fa-icon($fa-var-bars);
+                padding-right: 1rem;
+            }
+        }
+
+        &-clear{
+            clear: both; 
+        }
+
+    }
 
     &__item {
         display: block;
@@ -37,40 +81,54 @@ $module: 'nav-menu-small';
         padding: 0;
         color: get-site-color('blue');
         @include font-regular();
-        @include type-settings(2);
+        @include type-settings(1);
         text-align: left;
     }
-    
+
     &__item-icon {
         color: get-site-color('brown');
         text-align: center;
         margin-right: 1rem;
-        
+
         &_gallery{
             @include fa-icon($fa-var-th-large);
         }
-        
+
         &_how-it-works{
             @include fa-icon($fa-var-cogs);
         }
-        
+
         &_globe{
             @include fa-icon($fa-var-globe);
+            color: get-site-color('blue');
+        }
+
+        &_workspace{
+            @include fa-icon($fa-var-play);
+        }
+
+        &_settings{
+            @include fa-icon($fa-var-cog);
+        }
+
+        &_signout{
+            @include fa-icon($fa-var-sign-out);
+            color: get-site-color('red');
+        }
+
+        &_signin{
+            @include fa-icon($fa-var-sign-in);
+            color: get-site-color('blue');
         }
     }
-    
+
     &__item-text {
         display: inline-block;
         color: get-site-color('blue');
-        
-        
+
+
         @include font-regular();
         text-align: center;
-/*        padding: 0.5rem 1rem;
-        &:hover {
-            border-bottom: 0.5rem inset get-site-color('blue');
-            padding-bottom: 0;
-        }*/
 
         &_selected {
             color: get-site-color('wall');
