--- a/static/sass/modules/_index.scss
+++ b/static/sass/modules/_index.scss
@@ -11,3 +11,4 @@
 @import "typography/typography";
 @import "language-menu/language-menu";
 @import "nav-menu-small/nav-menu-small";
+@import "nav-menu-large/nav-menu-large";
