--- a/static/sass/config/_colors.scss
+++ b/static/sass/config/_colors.scss
@@ -16,6 +16,7 @@ $site-colors: (
     'yellow': #FFFF66,
 
     //Supplementary colors
+    'purple': #CC3366,
     'brown': #996600,
     'grey': #C0C0C0,
     'orange': #FF9933,
