--- a/static/style/style/components/site.html
+++ b/static/style/style/components/site.html
@@ -14,7 +14,26 @@
         <footer>
             <p>header</p>
         </footer>
-        
+        <nav class="nav-menu-large">
+            <div class="nav-menu-large__fixed-container">
+                <ul class="nav-menu-large__list">
+                    <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_gallery"></i><span class="nav-menu-large__item-text">Gallery</span></li>
+                    <li class="nav-menu-large__item nav-menu-large__item_selected"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_how-it-works"></i><span class="nav-menu-large__item-text">How it works</span></li>
+                    <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_workspace"></i><span class="nav-menu-large__item-text">Workspace</span></li>
+                    <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_globe"></i><span class="nav-menu-large__item-text">Language</span></li>
+                    <li class="nav-menu-large__splitter"></li>
+<!--                    <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_settings"></i><span class="nav-menu-large__item-text">Settings</span></li>-->
+                    <li class="nav-menu-large__login">
+<!--                        <i class="nav-menu-large__item-icon nav-menu-large__item-icon_signout"></i>-->
+                        <span class="nav-menu-large__login-text">Log in</span></li>
+                    <li class="nav-menu-large__item">
+<!--                        <i class="nav-menu-large__item-icon nav-menu-large__item-icon_signin"></i>-->
+                        <span class="nav-menu-large__item-text">Sign up</span>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
         <div class="site__content">
             <a ng-click="invisible = !invisible" href="#">Show/hide site content</a>
             <p ng-hide="invisible">
