--- a/static/sass/modules/_index.scss
+++ b/static/sass/modules/_index.scss
@@ -12,3 +12,4 @@
 @import "language-menu/language-menu";
 @import "nav-menu-small/nav-menu-small";
 @import "nav-menu-large/nav-menu-large";
+@import "nav-menu-mobile/nav-menu-mobile";
