--- a/static/style/style/components/site.html
+++ b/static/style/style/components/site.html
@@ -11,6 +11,30 @@
 
     </head>
     <body class="site">
+        <nav class="nav-menu-mobile">
+                <ul class="nav-menu-mobile__list">
+                    <li class="nav-menu-mobile__item">
+                        <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_gallery"></i>
+                        <span class="nav-menu-mobile__item-text">Gallery</span>
+                    </li>
+                    <li class="nav-menu-mobile__item nav-menu-mobile__item_selected">
+                        <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_how-it-works"></i>
+                        <span class="nav-menu-mobile__item-text">FAQ</span>
+                    </li>
+                    <li class="nav-menu-mobile__item">
+                        <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_workspace"></i>
+                        <span class="nav-menu-mobile__item-text">Work</span>
+                    </li>
+                    <li class="nav-menu-mobile__item">
+                        <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_globe"></i>
+                        <span class="nav-menu-mobile__item-text">Language</span>
+                    </li>
+                    <li class="nav-menu-mobile__item">
+                        <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_man"></i>
+                        <span class="nav-menu-mobile__item-text">Me</span>
+                    </li>
+                </ul>
+        </nav>
         <footer>
             <p>header</p>
         </footer>
@@ -19,20 +43,35 @@
                 <ul class="nav-menu-large__list">
                     <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_gallery"></i><span class="nav-menu-large__item-text">Gallery</span></li>
                     <li class="nav-menu-large__item nav-menu-large__item_selected"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_how-it-works"></i><span class="nav-menu-large__item-text">How it works</span></li>
-                    <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_workspace"></i><span class="nav-menu-large__item-text">Workspace</span></li>
+<!--                    <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_workspace"></i><span class="nav-menu-large__item-text">Workspace</span></li>-->
                     <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_globe"></i><span class="nav-menu-large__item-text">Language</span></li>
                     <li class="nav-menu-large__splitter"></li>
-<!--                    <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_settings"></i><span class="nav-menu-large__item-text">Settings</span></li>-->
                     <li class="nav-menu-large__login">
-<!--                        <i class="nav-menu-large__item-icon nav-menu-large__item-icon_signout"></i>-->
                         <span class="nav-menu-large__login-text">Log in</span></li>
-                    <li class="nav-menu-large__item">
-<!--                        <i class="nav-menu-large__item-icon nav-menu-large__item-icon_signin"></i>-->
-                        <span class="nav-menu-large__item-text">Sign up</span>
+                    <li class="nav-menu-large__login">
+                        <span class="nav-menu-large__login-text">Sign up</span>
                     </li>
                 </ul>
             </div>
         </nav>
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
 
         <div class="site__content">
             <a ng-click="invisible = !invisible" href="#">Show/hide site content</a>
