--- a/static/style/style/components/site.html
+++ b/static/style/style/components/site.html
@@ -35,44 +35,23 @@
                     </li>
                 </ul>
         </nav>
-        <footer>
-            <p>header</p>
-        </footer>
-        <nav class="nav-menu-large">
-            <div class="nav-menu-large__fixed-container">
-                <ul class="nav-menu-large__list">
-                    <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_gallery"></i><span class="nav-menu-large__item-text">Gallery</span></li>
-                    <li class="nav-menu-large__item nav-menu-large__item_selected"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_how-it-works"></i><span class="nav-menu-large__item-text">How it works</span></li>
-<!--                    <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_workspace"></i><span class="nav-menu-large__item-text">Workspace</span></li>-->
-                    <li class="nav-menu-large__item"><i class="nav-menu-large__item-icon nav-menu-large__item-icon_globe"></i><span class="nav-menu-large__item-text">Language</span></li>
-                    <li class="nav-menu-large__splitter"></li>
-                    <li class="nav-menu-large__login">
-                        <span class="nav-menu-large__login-text">Log in</span></li>
-                    <li class="nav-menu-large__login">
-                        <span class="nav-menu-large__login-text">Sign up</span>
+        <nav class="nav-menu-desktop">
+            <div class="nav-menu-desktop__fixed-container">
+                <ul class="nav-menu-desktop__list">
+                    <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_gallery"></i><span class="nav-menu-desktop__item-text">Gallery</span></li>
+                    <li class="nav-menu-desktop__item nav-menu-desktop__item_selected"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_how-it-works"></i><span class="nav-menu-desktop__item-text">How it works</span></li>
+<!--                    <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_workspace"></i><span class="nav-menu-desktop__item-text">Workspace</span></li>-->
+                    <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_globe"></i><span class="nav-menu-desktop__item-text">Language</span></li>
+                    <li class="nav-menu-desktop__splitter"></li>
+                    <li class="nav-menu-desktop__login">
+                        <span class="nav-menu-desktop__login-text">Log in</span></li>
+                    <li class="nav-menu-desktop__login">
+                        <span class="nav-menu-desktop__login-text">Sign up</span>
                     </li>
                 </ul>
             </div>
         </nav>
         
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-
         <div class="site__content">
             <a ng-click="invisible = !invisible" href="#">Show/hide site content</a>
             <p ng-hide="invisible">
