--- a/static/sass/modules/language-menu/_language-menu.scss
+++ b/static/sass/modules/language-menu/_language-menu.scss
@@ -7,41 +7,26 @@ $module: 'language-menu';
 //https://css-tricks.com/forums/topic/prevent-body-scrolling-when-the-user-scrolls-on-fixed-position-div/
 
 .#{$module} {
-    display: none;
-    overflow: auto;
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    //top: 0;
-    @include vrhythm('top', 2);
-    left: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
     background-color: get-site-color('white');
-    //transform: translateY(3rem);
-
-    @include set-z-index('language-menu');
-
-    &_visible {
-        display: block;
-    }
+    position:relative;
 
     &__list {
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: flex-start;
         list-style: none;
         margin: 0;
         padding: 0;
-        //@include vrhythm('padding-top', 2);
-        
-        &-terminator{
-            //+2 because position fixed combined with top - vrhytm(2)
-            @include vrhythm('height', 1 + 2);
-        }
     }
     
     &__close-button
     {
         color: get-site-color('blue');
-        position: fixed;
-        //top: 0;
-        @include vrhythm('top', 2);
+        position: absolute;
+        top: 0;
         right: 0;
         text-align: right;
         padding-right: 2rem;
@@ -52,10 +37,8 @@ $module: 'language-menu';
         @include fa-icon($fa-var-times);
         @include type-settings(2);
     }
-    
 
     &__item {
-        display: block;
         margin: 0;
         padding: 0;
         color: get-site-color('blue');
@@ -70,11 +53,17 @@ $module: 'language-menu';
         
         @include type-settings(1);
         @include font-regular();
-        text-align: center;
-        padding: 0.5rem 1rem;
+        
+        @include vrhythm('padding-bottom', 0.5);
+        @include vrhythm('padding-left', 0.5);
+        @include vrhythm('padding-right', 0.5);
+        
         &:hover {
-            border-bottom: 0.5rem inset get-site-color('pistachio');
-            padding-bottom: 0;
+            @include vrhythm('padding-bottom', 0.25);
+            @include vrhythm('border-bottom-width', 0.25);
+            border-bottom-style: inset;
+            border-bottom-color: get-site-color('pistachio');
+            
         }
 
         &_selected {
