--- a/static/style/style/components/site.html
+++ b/static/style/style/components/site.html
@@ -12,46 +12,50 @@
     </head>
     <body class="site">
         <nav class="nav-menu-mobile">
-                <ul class="nav-menu-mobile__list">
-                    <li class="nav-menu-mobile__item">
-                        <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_gallery"></i>
-                        <span class="nav-menu-mobile__item-text">Gallery</span>
-                    </li>
-                    <li class="nav-menu-mobile__item nav-menu-mobile__item_selected">
-                        <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_how-it-works"></i>
-                        <span class="nav-menu-mobile__item-text">FAQ</span>
-                    </li>
-                    <li class="nav-menu-mobile__item">
-                        <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_workspace"></i>
-                        <span class="nav-menu-mobile__item-text">Work</span>
-                    </li>
-                    <li class="nav-menu-mobile__item">
-                        <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_globe"></i>
-                        <span class="nav-menu-mobile__item-text">Language</span>
-                    </li>
-                    <li class="nav-menu-mobile__item">
-                        <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_man"></i>
-                        <span class="nav-menu-mobile__item-text">Me</span>
-                    </li>
-                </ul>
+            <ul class="nav-menu-mobile__list">
+                <li class="nav-menu-mobile__item">
+                    <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_gallery"></i>
+                    <span class="nav-menu-mobile__item-text">Gallery</span>
+                </li>
+                <li class="nav-menu-mobile__item nav-menu-mobile__item_selected">
+                    <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_how-it-works"></i>
+                    <span class="nav-menu-mobile__item-text">FAQ</span>
+                </li>
+                <li class="nav-menu-mobile__item">
+                    <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_workspace"></i>
+                    <span class="nav-menu-mobile__item-text">Work</span>
+                </li>
+                <li class="nav-menu-mobile__item">
+                    <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_globe"></i>
+                    <span class="nav-menu-mobile__item-text">Language</span>
+                </li>
+                <li class="nav-menu-mobile__item">
+                    <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_man"></i>
+                    <span class="nav-menu-mobile__item-text">Me</span>
+                </li>
+            </ul>
         </nav>
         <nav class="nav-menu-desktop">
-            <div class="nav-menu-desktop__fixed-container">
-                <ul class="nav-menu-desktop__list">
-                    <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_gallery"></i><span class="nav-menu-desktop__item-text">Gallery</span></li>
-                    <li class="nav-menu-desktop__item nav-menu-desktop__item_selected"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_how-it-works"></i><span class="nav-menu-desktop__item-text">How it works</span></li>
-<!--                    <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_workspace"></i><span class="nav-menu-desktop__item-text">Workspace</span></li>-->
-                    <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_globe"></i><span class="nav-menu-desktop__item-text">Language</span></li>
-                    <li class="nav-menu-desktop__splitter"></li>
-                    <li class="nav-menu-desktop__login">
-                        <span class="nav-menu-desktop__login-text">Log in</span></li>
-                    <li class="nav-menu-desktop__login">
-                        <span class="nav-menu-desktop__login-text">Sign up</span>
-                    </li>
-                </ul>
+            <div class="nav-menu-desktop__stub"></div>
+            <div class="nav-menu-desktop__container-fluid">
+                <div class="nav-menu-desktop__container-fixed-width">
+                    <ul class="nav-menu-desktop__list">
+                        <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_gallery"></i><span class="nav-menu-desktop__item-text">Gallery</span></li>
+                        <li class="nav-menu-desktop__item nav-menu-desktop__item_selected"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_how-it-works"></i><span class="nav-menu-desktop__item-text">How it works</span></li>
+                        <!--                    <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_workspace"></i><span class="nav-menu-desktop__item-text">Workspace</span></li>-->
+                        <li class="nav-menu-desktop__item"><i class="nav-menu-desktop__item-icon nav-menu-desktop__item-icon_globe"></i><span class="nav-menu-desktop__item-text">Language</span></li>
+                        <li class="nav-menu-desktop__splitter"></li>
+                        <li class="nav-menu-desktop__login">
+                            <span class="nav-menu-desktop__login-text">Log in</span></li>
+                        <li class="nav-menu-desktop__login">
+                            <span class="nav-menu-desktop__login-text">Sign up</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
+
         </nav>
-        
+
         <div class="site__content">
             <a ng-click="invisible = !invisible" href="#">Show/hide site content</a>
             <p ng-hide="invisible">
