--- a/static/sass/modules/_index.scss
+++ b/static/sass/modules/_index.scss
@@ -12,3 +12,5 @@
 @import "language-menu/language-menu";
 @import "nav-menu-desktop/nav-menu-desktop";
 @import "nav-menu-mobile/nav-menu-mobile";
+@import "button-provider/button-provider";
+@import "login/login";
