--- a/static/sass/modules/login/_login.scss
+++ b/static/sass/modules/login/_login.scss
@@ -14,6 +14,22 @@ $module: 'login';
         //flex: 1 0 100%;
         @include vrhythm('margin-bottom', 1);
     }
+
+    &__input
+    {
+        width: 100%;
+        //@include vrhythm('padding-top', 0.25);
+        //@include vrhythm('padding-bottom', 0.25);
+        padding-left: 1rem;
+        padding-right: 1rem;
+        @include vrhythm('margin-bottom', 1);
+        @include font-regular();
+        @include type-settings(0);
+        outline: 0;
+        border: 1px solid #ccc;
+        box-shadow: 0 0 10px get-site-color('pistachio');
+    }
+
     &__header
     {
         text-align: center;
@@ -44,7 +60,7 @@ $module: 'login';
         text-align: center;
         width: 100%;
     }
-    
+
     &__horizontal-separator-text{
         background-color: white;
         text-transform: none;
