--- a/static/sass/modules/login/_login.scss
+++ b/static/sass/modules/login/_login.scss
@@ -11,22 +11,42 @@ $module: 'login';
         align-items: center;
     }
     &__button-provider{
-        //flex: 1 0 100%;
         @include vrhythm('margin-bottom', 1);
     }
 
     &__input
     {
         width: 100%;
-        //@include vrhythm('padding-top', 0.25);
-        //@include vrhythm('padding-bottom', 0.25);
         padding-left: 1rem;
         @include vrhythm('margin-bottom', 1);
         @include font-regular();
         @include type-settings(0);
         outline: 0;
         border: 1px solid #ccc;
-        box-shadow: 0 0 10px get-site-color('pistachio');
+        &:focus{
+            box-shadow: 0 0 10px transparentize(get-site-color('pistachio'), 0.2);
+        }
+
+    }
+    
+    &__additional-options
+    {
+        width: 100%;
+        display:flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        @include font-regular();
+        @include type-settings(0);
+        @include vrhythm('margin-bottom', 1);
+        &-inline-separator
+        {
+            margin-left: 0.5rem;
+            margin-right: 0.5rem;
+            border-left: 1px solid #ccc;
+        }
+        &-link{
+            
+        }
     }
 
     &__header
@@ -40,13 +60,23 @@ $module: 'login';
         @include vrhythm('margin-bottom', 1);
     }
 
-    &__post
+    &__button-submit
+    {
+        @include vrhythm('margin-bottom', 1);
+    }
+
+    &__info
     {
         text-align: center;
         padding: 0rem 1rem;
         @include type-settings(-1);
         @include font-regular();
         color: tint(get-site-color('black'), 70%);
+        &-link
+        {
+            margin-left: 0.2rem;
+            margin-right: 0.2rem;
+        }
     }
 
     &__horizontal-separator{
