--- a/static/sass/modules/_index.scss
+++ b/static/sass/modules/_index.scss
@@ -12,6 +12,10 @@
 @import "language-menu/language-menu";
 @import "nav-menu-desktop/nav-menu-desktop";
 @import "nav-menu-mobile/nav-menu-mobile";
+@import "fine-print/fine-print";
+@import "horizontal-separator/horizontal-separator";
+@import "input/input";
 @import "button/button";
 @import "button-provider/button-provider";
 @import "login/login";
+@import "signup/signup";
