--- a/static/sass/modules/login/_login.scss
+++ b/static/sass/modules/login/_login.scss
@@ -18,25 +18,25 @@ $module: 'login';
         margin: 0;
         @include font-regular();
         @include type-settings(0);
-        @include vrhythm('margin-bottom', 1);
     }
 
     &__button-provider{
-        @include vrhythm('margin-bottom', 1);
+        @include vrhythm('margin-top', 1);
     }
 
-    &__input
+    &__input-group
     {
-        @include vrhythm('margin-bottom', 1);
+        width: 100%;
     }
 
     &__button-submit
     {
-        @include vrhythm('margin-bottom', 1);
+        @include vrhythm('margin-top', 1);
     }
 
     &__fine-print
     {
+        @include vrhythm('margin-top', 1);
     }
 
     &__horizontal-separator{
@@ -44,7 +44,7 @@ $module: 'login';
 
     &__additional-options
     {
-        @include vrhythm('margin-bottom', 1);
+        @include vrhythm('margin-top', 1);
 
         width: 100%;
         display:flex;
