--- a/static/sass/modules/input/_input.scss
+++ b/static/sass/modules/input/_input.scss
@@ -1,14 +1,49 @@
 $module: 'input';
 
 .#{$module} {
-    width: 100%;
-    padding-left: 1rem;
+
+    //padding-left: 1rem;
+
+
+    &__input
+    {
+        @include vrhythm('margin-top', 1);
+        width: 100%;
+        @include font-regular();
+        @include type-settings(0);
+        outline: 0;
+        border: 1px solid #ccc;
+
+        &:focus{
+            box-shadow: 0 0 10px transparentize(get-site-color('green'), 0.2);
+        }
+    }
     
-    @include font-regular();
-    @include type-settings(0);
-    outline: 0;
-    border: 1px solid #ccc;
-    &:focus{
-        box-shadow: 0 0 10px transparentize(get-site-color('pistachio'), 0.2);
+    &__validation
+    {
+        @include font-regular();
+        @include type-settings(0);
+        text-align: right;
+        color: get-site-color('red');
+        display: none;
+    }
+
+    &_invalid
+    {
+
+        .#{$module} {
+            &__input
+            {
+                margin-top: 0;
+                border-color: get-site-color('red');
+                &:focus{
+                    box-shadow: 0 0 10px transparentize(get-site-color('red'), 0.2);
+                }
+            }
+            &__validation
+            {
+                display: block;
+            }
+        }
     }
 }
