--- a/static/sass/modules/signup/_signup.scss
+++ b/static/sass/modules/signup/_signup.scss
@@ -37,4 +37,15 @@ $module: 'signup';
         @include font-regular();
         @include type-settings(0);
     }
+    
+    &__input-group
+    {
+        @include vrhythm('margin-top', 1);
+        width: 100%;
+    }
+    
+    &__button-submit
+    {
+        @include vrhythm('margin-top', 1);
+    }
 }
