--- a/static/sass/modules/language-menu/_language-menu.scss
+++ b/static/sass/modules/language-menu/_language-menu.scss
@@ -63,7 +63,7 @@ $module: 'language-menu';
             @include vrhythm('padding-bottom', 0.25);
             @include vrhythm('border-bottom-width', 0.25);
             border-bottom-style: inset;
-            border-bottom-color: get-site-color('pistachio');
+            border-bottom-color: get-site-color('green');
             
         }
 
