--- a/static/sass/modules/nav-menu-desktop/_nav-menu-desktop.scss
+++ b/static/sass/modules/nav-menu-desktop/_nav-menu-desktop.scss
@@ -74,7 +74,7 @@ $module: 'nav-menu-desktop';
 
         &_selected{
             @include vrhythm('border-bottom-width', 0.25);
-            border-bottom-style: inset;
+            border-bottom-style: solid;
             border-bottom-color: get-site-color('purple');
             @include vrhythm('padding-bottom', 0.25);
 
@@ -90,7 +90,7 @@ $module: 'nav-menu-desktop';
 
         &:hover {
             @include vrhythm('border-bottom-width', 0.25);
-            border-bottom-style: inset;
+            border-bottom-style: solid;
             border-bottom-color: get-site-color('purple');
             @include vrhythm('padding-bottom', 0.25);
 
