--- a/static/sass/modules/nav-menu-mobile/_nav-menu-mobile.scss
+++ b/static/sass/modules/nav-menu-mobile/_nav-menu-mobile.scss
@@ -34,7 +34,7 @@ $module: 'nav-menu-mobile';
 
         &_selected{
             @include vrhythm('border-bottom-width', 0.25);
-            border-bottom-style: inset;
+            border-bottom-style: solid;
             border-bottom-color: get-site-color('purple');
             @include vrhythm('padding-bottom', 0.25);
 
