--- a/static/style/style/components/site.html
+++ b/static/style/style/components/site.html
@@ -120,11 +120,16 @@
                 Proin bibendum lobortis erat vitae varius. Sed ac risus interdum, varius libero in, sodales nulla. Aenean nec est urna. Pellentesque placerat urna id dui placerat, ac tincidunt nisi blandit. Etiam consequat sodales nulla. Suspendisse ornare nisi nec venenatis placerat. Nam vel odio lacinia, bibendum ligula vitae, consequat arcu. Integer vel maximus ante. Maecenas urna lectus, pulvinar sed justo sit amet, fermentum suscipit felis. Mauris eu justo id neque porttitor pharetra. Aenean condimentum metus ut turpis fringilla maximus. Mauris eget erat mattis ante rutrum finibus eu nec est. Proin rutrum enim nulla, sit amet convallis purus consectetur in.
             </p>
         </div>
-        <footer>
-            <p><b>Footer with unknown size</b></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae mauris ut tortor dictum dictum. Vestibulum dapibus augue ut libero ullamcorper tincidunt non vitae est. Phasellus fringilla quam vel enim pharetra, quis suscipit enim volutpat. Quisque non neque vulputate, pharetra tellus non, vestibulum arcu. Phasellus rhoncus interdum felis, ut rhoncus metus feugiat quis. Vestibulum finibus lorem et feugiat feugiat. Mauris tincidunt lacus dolor, sit amet laoreet erat dignissim vel. Proin eu dolor sit amet purus condimentum rhoncus. Praesent laoreet scelerisque nisi, id vestibulum turpis tempor sed. Proin vel augue ultrices, imperdiet diam non, vestibulum diam. Donec ac mattis libero. Nullam a velit et diam tempor sodales. Nunc dolor est, fringilla sed leo ac, tincidunt posuere orci. Sed consectetur at odio at porttitor.</p>
+        <footer class="footer">
+            <div class="footer_container">
+                <a class="footer_link">test</a>
+                <div class="footer__copyrigths">
+                    <span>© 2015 Stitch Galaxy</span>
+                    <br/>
+                    <span>Except where noted, all rights reserved.</span>
+                </div>
+            </div>
         </footer>
-
         <script src="/assets/js/vendor.min.js"></script>
         <script src="/assets/js/site.min.js"></script>
     </body>
