--- a/static/sass/modules/footer/_footer.scss
+++ b/static/sass/modules/footer/_footer.scss
@@ -5,21 +5,11 @@ $module: 'footer';
     width:100%;
     background-color: get-site-color('turquoise');
 
-    &__container
-    {
-        &:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-    }
-
     &__copyrigths
     {
         @include type-settings(-1);
         @include font-regular();
-        color: get-site-color('black');
-        //color: tint(get-site-color('black'), 70%);
+        color: get-site-color('blue');
         margin: 0 1rem;
         display: block;
         
