--- a/static/style/style/components/site.html
+++ b/static/style/style/components/site.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="stitchGalaxy">
+<html ng-app="stitchGalaxy" class="site">
     <head>
         <meta charset="utf-8">
         <title></title>
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="/assets/css/site.min.css">
 
     </head>
-    <body class="site">
-        <nav class="nav-menu-mobile">
+    <body class="site__body">
+        <nav class="site__header nav-menu-mobile">
             <ul class="nav-menu-mobile__list">
                 <li class="nav-menu-mobile__item">
                     <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_gallery"></i>
@@ -35,7 +35,7 @@
                 </li>
             </ul>
         </nav>
-        <nav class="nav-menu-desktop">
+        <nav class="site__header nav-menu-desktop">
             <div class="nav-menu-desktop__stub"></div>
             <div class="nav-menu-desktop__container-fluid">
                 <div class="nav-menu-desktop__container-fixed-width">
@@ -120,14 +120,12 @@
                 Proin bibendum lobortis erat vitae varius. Sed ac risus interdum, varius libero in, sodales nulla. Aenean nec est urna. Pellentesque placerat urna id dui placerat, ac tincidunt nisi blandit. Etiam consequat sodales nulla. Suspendisse ornare nisi nec venenatis placerat. Nam vel odio lacinia, bibendum ligula vitae, consequat arcu. Integer vel maximus ante. Maecenas urna lectus, pulvinar sed justo sit amet, fermentum suscipit felis. Mauris eu justo id neque porttitor pharetra. Aenean condimentum metus ut turpis fringilla maximus. Mauris eget erat mattis ante rutrum finibus eu nec est. Proin rutrum enim nulla, sit amet convallis purus consectetur in.
             </p>
         </div>
-        <footer class="footer">
-            <div class="footer_container">
-                <a class="footer_link">test</a>
-                <div class="footer__copyrigths">
-                    <span>© 2015 Stitch Galaxy</span>
-                    <br/>
-                    <span>Except where noted, all rights reserved.</span>
-                </div>
+        <footer class="site__footer footer">
+            <a class="footer_link">test</a>
+            <div class="footer__copyrigths">
+                <span>© 2015 Stitch Galaxy</span>
+                <br/>
+                <span>Except where noted, all rights reserved.</span>
             </div>
         </footer>
         <script src="/assets/js/vendor.min.js"></script>
