--- a/static/partials/search.html
+++ b/static/partials/search.html
@@ -1,4 +1,5 @@
 <p>Search partial!!!</p>
+<a href ui-sref="app.login({lang: activeLang})" translate>login</a>
         <hr class="hr-unstyled"/>
         <div class="container-fluid notification-container">
             <div class="row">
