--- a/static/partials/search.html
+++ b/static/partials/search.html
@@ -1,5 +1,7 @@
 <p>Search partial!!!</p>
-<a href ui-sref="app.login({lang: activeLang})" translate>login</a>
+<a href ui-sref="app.login({lang: activeLang})" translate>current</a>
+<a href ui-sref="app.login({lang: 'en'})" translate>en</a>
+<a href ui-sref="app.login({lang: 'ru'})" translate>ru</a>
         <hr class="hr-unstyled"/>
         <div class="container-fluid notification-container">
             <div class="row">
