--- a/static/partials/footer.html
+++ b/static/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="site__footer footer">
+<!--<footer class="footer">-->
     <a href="#" class="footer__link">Terms of Use</a>
     <a href="#" class="footer__link">Privacy Policy</a>
     <div class="footer__copyrigths">
@@ -6,4 +6,4 @@
         <br/>
         <span>Except where noted, all rights reserved.</span>
     </div>
-</footer>
+<!--</footer>-->
