--- a/static/partials/language.html
+++ b/static/partials/language.html
@@ -1,6 +1,4 @@
-<!--<ng-include src="partials/nav.html"></ng-include>
-<div ng-include="partials/nav.html"></div>-->
-<div ng-include="'partials/nav.html'"></div>
+<div ng-include="'partials/nav.html'" class="site__header"></div>
 <div class="site__content">
     <div class="language-menu">
         <div class="language-menu__close-button"><i class="language-menu__close-button-icon"></i></div>
@@ -16,5 +14,4 @@
         </ul>
     </div>
 </div>
-
-<div ng-include="'partials/footer.html'"></div>
+<footer ng-include="'partials/footer.html'" class="site__footer footer"></footer>
