--- a/static/partials/nav.html
+++ b/static/partials/nav.html
@@ -1,4 +1,4 @@
-<nav class="site__header nav-menu-mobile">
+<nav class="nav-menu-mobile">
     <ul class="nav-menu-mobile__list">
         <li class="nav-menu-mobile__item">
             <i class="nav-menu-mobile__item-icon nav-menu-mobile__item-icon_gallery"></i>
@@ -22,7 +22,7 @@
         </li>
     </ul>
 </nav>
-<nav class="site__header nav-menu-desktop">
+<nav class="nav-menu-desktop">
     <div class="nav-menu-desktop__stub"></div>
     <div class="nav-menu-desktop__container-fluid">
         <div class="nav-menu-desktop__container-fixed-width">
