--- a/static/partials/language.html
+++ b/static/partials/language.html
@@ -14,4 +14,4 @@
         </ul>
     </div>
 </div>
-<footer ng-include="'partials/footer.html'" class="site__footer footer"></footer>
+<div ng-include="'partials/footer.html'" class="site__footer"></div>
