--- a/static/partials/footer.html
+++ b/static/partials/footer.html
@@ -2,7 +2,7 @@
     <a href="#" class="footer__link">Terms of Use</a>
     <a href="#" class="footer__link">Privacy Policy</a>
     <div class="footer__copyrigths">
-        <span>© 2015 Stitch Galaxy</span>
+        <span>Â© 2015 Stitch Galaxy</span>
         <br/>
         <span>Except where noted, all rights reserved.</span>
     </div>
