--- a/static/partials/language.html
+++ b/static/partials/language.html
@@ -4,7 +4,7 @@
         <div class="language-menu__close-button"><i class="language-menu__close-button-icon"></i></div>
         <ul class="language-menu__list">
             <li class="language-menu__item" ng-repeat="language in languages">
-                <span class="language-menu__item-text">{{language.foreign}} - {{language.native}}</span>
+                <span class="language-menu__item-text" ng-class="{'language-menu__item-text_selected': language.locale === activeLang}">{{language.foreign}} - {{language.native}}</span>
             </li>
 <!--            <li class="language-menu__item"><span class="language-menu__item-text language-menu__item-text_selected">English - English</span></li>
             <li class="language-menu__item"><span class="language-menu__item-text">Russian - Русский</span></li>
